Add Kotlin example compile options for JDK 24